# ros_basket

./: .gitignore
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: basket.pc
devel/share/basket/cmake/: basketConfig.cmake
src/basket/: CMakeLists.txt
src/basket/inc/: camera.hpp  cutest.hpp  myinfer.hpp  mythread.hpp  pclprocess.hpp  ros_basket.hpp  uart.hpp
src/basket/runs/detect/train/: args.yaml  results.csv
src/basket/runs/segment/train/: args.yaml  results.csv
src/basket/runs/segment/train2/: args.yaml  results.csv
src/basket/src/: camera.cpp  main.cpp  myinfer.cpp  mythread.cpp  pclprocess.cpp  ros_basket.cpp  uart.cpp
src/basket/src/cuda/: CMakeLists.txt  infer.cu  test.cu  yolo.cu
src/basket/workspace/pcl/: output.ply  output_opt.ply  output_seg.ply  output_seg_basket.ply  vg_seg.ply
src/basket/yolov8/: export.py  infer.py  train.py  transform.py
